--- a/backend/flask_admin/templates/base.html
+++ b/backend/flask_admin/templates/base.html
@@ -8,6 +8,7 @@
 
 <div class="app-shell">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="/static/ui.js"></script>
 
     <!-- Side Navigation -->
     <aside class="sidebar">
@@ -35,6 +36,5 @@
     </main>
 
 </div>
-
 </body>
 </html>
